@@ -69,7 +69,7 @@ export(
     IUPAC_CODE_MAP, AMINO_ACID_CODE, GENETIC_CODE,
     DNA_ALPHABET, RNA_ALPHABET, AA_ALPHABET,
     #XRaw, XRaw.copy, XInteger, XInteger.read, XInteger.write,
-    views, adjacentViews,
+    views, adjacentViews, trim,
     FASTArecordsToCharacter, CharacterToFASTArecords,
     FASTArecordsToBStringViews, BStringViewsToFASTArecords,
     read.BStringViews, write.BStringViews,
